maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:24: error: too many arguments for method print: (x: Any)Unit
  print(x,y,neighborPos,xn,yn,canAccess, " ### ")
       ^